bin/css/components/buttons.css
/* ... */
/****************/
/* button white */
/****************/
input[type="submit"].btn-white,
input[type="button"].btn-white,
input[type="reset"].btn-white,
button.qui-button.btn-white,
button.btn-white,
.btn-white {
    background: var(--qui-btn-white-bg);
    border-color: var(--qui-btn-white-borderColor);
    color: var(--qui-btn-white-color);
}

input[type="submit"].btn-white:hover,
input[type="submit"].btn-white:active,
input[type="button"].btn-white:hover,
input[type="button"].btn-white:active,
input[type="reset"].btn-white:hover,
input[type="reset"].btn-white:active,
button.qui-button.btn-white:hover,
button.qui-button.btn-white:active,
.btn-white:hover,
.btn-white:active {
    background: var(--qui-btn-white-bg--hover);
    color: var(--qui-btn-white-color--hover);
    outline: none;
}

/* outline */
input[type="submit"].btn-white.btn-outline,
input[type="button"].btn-white.btn-outline,
input[type="reset"].btn-white.btn-outline,
button.btn-white.qui-button.btn-outline,
button.btn-white.btn-outline,
.btn-white.btn-outline,
input[type="submit"].btn-white.btn-outline:disabled:hover, /* outline disabled */
input[type="submit"].btn-white.btn-outline:disabled:active,
input[type="button"].btn-white.btn-outline:disabled:hover,
input[type="button"].btn-white.btn-outline:disabled:active,
input[type="reset"].btn-white.btn-outline:disabled:hover,
input[type="reset"].btn-white.btn-outline:disabled:active,
button.qui-button.btn-white.btn-outline:disabled:hover,
button.qui-button.btn-white.btn-outline:disabled:active,
button.btn-white.btn-outline:disabled:hover,
button.btn-white.btn-outline:disabled:active,
.btn-white.btn-outline.btn-disabled:hover,
.btn-white.btn-outline.btn-disabled:active {
    color: #fafafa;
}

/* outline hover */
input[type="submit"].btn-white.btn-outline:hover,
input[type="submit"].btn-white.btn-outline:active,
input[type="button"].btn-white.btn-outline:hover,
input[type="button"].btn-white.btn-outline:active,
input[type="reset"].btn-white.btn-outline:hover,
input[type="reset"].btn-white.btn-outline:active,
button.btn-white.btn-outline:not(:disabled):hover,
button.btn-white.btn-outline:active,
.btn-white.btn-outline:hover,
.btn-white.btn-outline:active {
    color: #393f46;
}

/**********************************/
/* button outline standard design */
/**********************************/
input[type="submit"].btn-outline,
input[type="button"].btn-outline,
input[type="reset"].btn-outline,
button.btn-outline,
.btn-outline,
.qui-button.btn-outline,
a.qui-button.btn-outline,
button.qui-button.btn-outline {
    background-color: transparent;
}

input[type="submit"].btn-outline:hover,
input[type="submit"].btn-outline:active,
input[type="button"].btn-outline:hover,
input[type="button"].btn-outline:active,
input[type="reset"].btn-outline:hover,
input[type="reset"].btn-outline:active,
button.btn-outline:not(:disabled):hover,
button.btn-outline:active,
.btn-outline:hover,
.btn-outline:active {
    color: #fff;
}

/***********************************/
/* button disabled standard design */
/***********************************/
input[type="submit"]:disabled,
input[type="button"]:disabled,
input[type="reset"]:disabled,
button.qui-button:disabled,
button:disabled,
.btn[disabled],
.btn:disabled,
a.qui-button.btn-disabled,
a.btn.btn-disabled,
.btn-disabled {
    opacity: 0.6;
}

[disabled]:hover,
:disabled:hover,
[disabled]:active,
:disabled:active,
[disabled]:hover > *,
:disabled:hover > * {
    cursor: not-allowed;
}

input[type="submit"].btn-outline:disabled:hover,
input[type="submit"].btn-outline:disabled:active,
input[type="button"].btn-outline:disabled:hover,
input[type="button"].btn-outline:disabled:active,
input[type="reset"].btn-outline:disabled:hover,
input[type="reset"].btn-outline:disabled:active,
button.qui-button.btn-outline:disabled:hover,
button.qui-button.btn-outline:disabled:active,
button.btn-outline:disabled:hover,
button.btn-outline:disabled:active,
.btn-outline.btn-disabled:hover,
.btn-outline.btn-disabled:active {
    opacity: 0.3;
}

/**
 * Button sizes
 */
.btn-sm {
    --padding-block: 0.5em;
    --padding-inline: 1em;

    font-size: .875em;
}

.btn-lg {
    gap: 1em;
    font-size: 1.25em;
}

/**
 * Button icon
 */
.btn.btn-icon {
    aspect-ratio: 1;
}

.btn.btn-rounded {
    border-radius: 10em;
}

